--- a/blog.html
+++ b/blog.html
@@ -23,20 +23,13 @@
             </nav>
         </div>
         <div class="main">
-            <div class="infocontainer">
-                <div class="devInfo">
-                    <div class="hello">Hi I am </div>
-                    <div class="name">Sudhanshu Kumar</div>
-                    <div class="about">Developer, Teacher, Writer</div>
-                    <div class="moreabout">I am a developer, and I love to cooking. I live in Chandigarh and study in Chandigarh University.</div>
-                    <div class="buttons">
-                        <button>Download CV</button>
-                        <button>Conatct Me</button>
-                    </div>
+            <div class="blogcontainer">
+                <h1>Blog by Sudhanshu - the legend</h1>
+                <div class="blogItem">
+                    <h2>Learn JavaScript is fun way</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum provident dolorem deleniti animi quam debitis asperiores, libero maiores ipsa magnam?</p>
                 </div>
-                <div class="devPic"><img src="./div.png" alt="Sudhanshu Kumar"></div>
-
-            </div>
+               
             </div>
     </div>
 </body>
