--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
                       <label for="clientphone" class="form-label">Phone</label>
                       <input type="phone" class="form-control" id="clientphone">
                     </div>
+                    <div class="mb-3">
+                      <label for="name" class="form-label">Enquiry</label>
+                      <input type="name" class="form-control" id="clientname" aria-describedby="clientHelp">
+                    </div>
                     <div class="mb-3" id="form-check">
                       <input type="checkbox" id="form-check-input" id="isclient">
                       <label class="form-check-label" for="isclient">I want you to work on a project with me</label>
